<resources>
    <string name="app_name">Ekio</string>
    <string-array name="menu_item">// name of the string array
        <item>Home</item>
        <item>Collection</item>
        <item>Settings</item>
    </string-array>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="auto_connexion">Auto connexion on app lunch</string>
    <string name="photo_title">Title</string>
    <string name="photo_date">Date</string>
    <string name="photo_location">Location</string>
    <string name="photo_comment">Comments</string>*
    <string name="keyword">Keywords</string>
    <string name="app_version">v 1.0.1</string>
    <string name="comment">Speaking for less than 15 minutes, he said he never suspected any wrongdoing when his father would ask him to sign contracts or documents. Jorge Messi also denies the charges.
Spain's tax agency is demanding heavy fines and prison sentences.
The trial began on Tuesday, and Thursday is expected to be the final day. A verdict is not expected until next week.
Because of the trial, Messi has missed part of his national team's preparations for the Copa America, which starts on Friday in the US. Argentina's first game is on Monday.
Evidence is being considered regarding income related to Messi's image rights, including contracts with Banco Sabadell, Danone, Adidas, Pepsi-Cola, Procter and Gamble, and the Kuwait Food Company.</string>
</resources>
