<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|left"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:paddingRight="20dp"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/photo_title"
                    android:hint="@string/photo_title" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/photo_date"
                    android:hint="@string/photo_date" />

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:rotation="90"
                android:id="@+id/photo"
                android:src="@drawable/welcome"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/photo_location"
                android:hint="@string/photo_location"
                android:layout_weight="0.8"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/photo_comment"
            android:hint="@string/photo_comment"
            android:layout_marginTop="20dp"
            android:gravity="top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/keyword"
            android:hint="@string/keyword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/goToCollection"
            android:text="Collection"
            android:onClick="goToCollection"/>

    </LinearLayout>

</LinearLayout>