<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|left"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.6"
                android:paddingRight="20dp"
                android:layout_gravity="bottom">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/photo_title"
                    android:hint="@string/photo_title"
                    android:inputType="text"
                    android:maxLines="1"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/photo_date"
                    android:hint="@string/photo_date"
                    android:inputType="text"
                    android:maxLines="1"/>

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="0.4"
                android:rotation="90"
                android:id="@+id/photo"
                android:src="@drawable/welcome"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/photo_location"
                android:hint="@string/photo_location"
                android:layout_weight="0.8"
                android:inputType="text"
                android:maxLines="1"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/geo"
                android:id="@+id/geolocalisation"
                android:background="@android:color/transparent"
                android:layout_weight="0.2"
                android:onClick="premiumFeature"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/keyword"
            android:hint="@string/keyword"
            android:inputType="text"
            android:maxLines="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/photo_comment"
                android:hint="@string/photo_comment"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:inputType="text"
                android:maxLines="1"/>


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/saveconfirm"
            android:src="@drawable/save"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:onClick="goResult"/>

        </LinearLayout>

</LinearLayout>