<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|left"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:paddingRight="20dp"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_title" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photo_title_view"
                    android:hint="@string/photo_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/photo_date" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/photo_date_view"
                    android:hint="@string/photo_date" />

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:rotation="90"
                android:id="@+id/photo_view"
                android:src="@drawable/welcome" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="0.8">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/photo_location"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/photo_location_view"
                    android:hint="@string/photo_location" />
                </LinearLayout>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:scaleType="fitCenter"
                android:src="@drawable/delete"
                android:padding="2dp"
                android:id="@+id/delete_from_view"
                android:background="@android:color/transparent"
                android:layout_weight="0.2"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:id="@+id/photo_comment_view"
            android:hint="@string/photo_comment"
            android:layout_marginTop="10dp"
            android:gravity="top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/keyword_view"
            android:hint="@string/keyword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:id="@+id/edit"
                android:layout_weight="0.5"
                android:src="@drawable/edit"
                android:layout_gravity="left"
                android:clickable="true" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:id="@+id/login"
                android:layout_weight="0.5"
                android:src="@drawable/collection"
                android:layout_gravity="right"
                android:clickable="true"
                android:onClick="goToCollection"/>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>