<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center|left"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.6"
                android:paddingRight="15dp"
                android:layout_gravity="bottom"
                android:weightSum="1">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/title_background"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/result_photo_title"
                        android:layout_gravity="center"
                        android:hint="@string/photo_title"
                        android:textColor="@android:color/white"
                        android:textSize="30dp"
                        android:textStyle="italic"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="20dp"/>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:id="@+id/result_photo_date"
                    android:hint="@string/photo_date" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:id="@+id/result_photo"
                android:src="@drawable/place_holder"
                android:onClick="goBig"
                android:padding="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="15dp"
            android:layout_weight="0.1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/result_photo_location"
                android:hint="@string/photo_location"
                android:background="@drawable/text_background"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/result_keyword"
            android:layout_weight="0.1"
            android:hint="@string/keyword"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@drawable/text_background">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/result_photo_comment"
                android:hint="@string/photo_comment"
                android:layout_marginTop="15dp"
                android:gravity="top"
                android:paddingLeft="5dp" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="20dp">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="0.5"
                android:src="@drawable/collection"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:id="@+id/result_collection"
                android:layout_marginRight="10dp"
                android:text="Save"
                android:onClick="goCollectionShowcase"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="0.5"
                android:src="@drawable/edit"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:id="@+id/result_edit"
                android:text="Save"
                android:onClick="goEdit"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </LinearLayout>





</RelativeLayout>